# roadster-charger

./: .gitignore  readme.md
.github/workflows/: build-firmware.yml  kicad-export.yml
firmware/: Cargo.toml  LICENSE-MIT
firmware/.cargo/: config.toml
firmware/.devcontainer/: devcontainer.json
firmware/.github/workflows/: rust_ci.yml
firmware/scripts/: flash.sh
firmware/src/: boost.rs  charger.rs  fusb307b.rs  led.rs  main.rs  pi.rs  tcpc.rs  temp_sense.rs  usb_pd.rs  vi_sense.rs
hardware/: .gitignore
hardware/components/54-00166/: 54-00166.kicad_sym
hardware/components/LTM8074IY_PBF/: BGA25C65P5X5_400X400X198N.kicad_mod  LTM8074IY_PBF.kicad_sym  LTM8074IY_PBF.step
hardware/components/PA2050.193NL/: PA2050.193NL.kicad_sym
hardware/components/ul_DAC70501MDQFR/KiCADv6/footprints.pretty/: WSON8_2P1X2P1_TEX.kicad_mod
hardware/roadster-charger/: boost.kicad_sch  fp-lib-table  roadster-charger.kicad_pcb  roadster-charger.kicad_pro  roadster-charger.kicad_sch  sym-lib-table
hardware/roadster-charger/components/54-00166/: 54-00166.step  TENSILITY_54-00166.kicad_mod
hardware/roadster-charger/components/LTC3786EUD_TRPBF/: LTC3786EUD_TRPBF.kicad_sym  LTC3786EUD_TRPBF.step  QFN-16_UD.kicad_mod
hardware/roadster-charger/components/PA2050.193NL/: IND_PA2050.193NL.kicad_mod  pa2050.193nl.step
hardware/roadster-charger/components/PA5119_421NLT/: PA5119.421NLT.STEP  PA5119_421NLT.kicad_sym
hardware/roadster-charger/components/PA5119_421NLT/footprints.pretty/: SMT_119.421NLT_PUL.kicad_mod
hardware/roadster-charger/components/PI3740-00-LGIZ/: LGA108S100P10X14_1000X1400X263N.kicad_mod  PI3740-00-LGIZ.kicad_sym  PI3740-00-LGIZ.step
hardware/roadster-charger/components/ul_DAC70501MDQFR/KiCADv6/: 2023-09-03_00-06-26.kicad_sym
hardware/roadster-charger/components/ul_MPM3606AGQV-P/KiCADv6/: 2023-10-01_20-54-10.kicad_sym
hardware/roadster-charger/components/ul_MPM3606AGQV-P/KiCADv6/footprints.pretty/: QFN3p0x5p0x1p6_MPM3606A_MNP.kicad_mod
shared/: Cargo.toml
shared/src/: lib.rs
telemetry/: Cargo.toml
telemetry-rerun/: Cargo.toml  blueprint.rbl
telemetry-rerun/src/: main.rs
telemetry/src/: main.rs
