[package]
name = "firmware"
version = "0.1.0"
authors = ["Zain Ahmed <zainahmed1559@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.20.1", features = ["esp32c3"] }
esp-backtrace = { version = "0.14.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.12.0", features = ["esp32c3"] }
zerocopy = { version = "0.8.13", features = ["derive"] }
bitfield = "0.17.0"
heapless = "0.8.0"
critical-section = "1.2.0"
fugit = "0.3.7"
portable-atomic = { version = "1.6.0", default-features = false, features = [
    "require-cas",
] }

[profile.dev]
opt-level = 3
debug = "full"

[profile.release]
opt-level = 3
debug = "full"
