[package]
name = "firmware"
version = "0.1.0"
authors = ["Zain Ahmed <zainahmed1559@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# ESP32C3
esp-backtrace = { version = "0.17", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-println = { version = "0.15.0", features = ["esp32c3"] }
esp32c3 = { version = "0.30.0", features = ["critical-section"] }

# Embedded
rtic = { features = ["esp32c3", "riscv-esp32c3-backend"], git = "https://github.com/rtic-rs/rtic.git"}
critical-section = "1.2"
portable-atomic = { version = "1.6", default-features = false, features = ["require-cas"] }
embedded-hal = "1.0"

# Local
shared = {path = "../shared"}

# Other
zerocopy = { version = "0.8", features = ["derive"] }
bitfield = "0.19"
heapless = "0.9"
fugit = "0.3"
nb = "1.1.0"
serde = { version = "1.0.228", default-features = false }

[profile.dev]
opt-level = 3
debug = "full"

[profile.release]
opt-level = 3
debug = "full"
